[package]
name = "zero2prod"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could specify a library name using the 'name' field. If unspecified,
# cargo will default to 'package.name', which is what we want.
path = "src/lib.rs"

# Double square brackets allow for multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There might be some turbulence - it's a beta after all!
actix-web = "4.0.0-beta.4"
chrono = "0.4.15"
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.1.0"
reqwest = "0.11.2"
tokio = "1.4.0"